# virtualkeyboard

./: CMakeLists.txt  LICENSE  README.md
3rd/: CMakeLists.txt
3rd/PinyinIME/command/: pinyinime_dictbuilder.cpp
3rd/PinyinIME/include/: userdict.h
3rd/PinyinIME/share/: dictbuilder.cpp  dictlist.cpp  dicttrie.cpp  matrixsearch.cpp  ngram.cpp  pinyinime.cpp  spellingtable.cpp  spellingtrie.cpp  splparser.cpp  userdict.cpp  utf16char.cpp
examples/: CMakeLists.txt
examples/PinyinIME_interface_test/: CMakeLists.txt  PinyinIME_interface_test.cpp
examples/quick_example/: CMakeLists.txt  quick_example.cpp  quick_example.qml  quick_example.qrc
examples/widget_example/: CMakeLists.txt  widget_example.cpp
src/: CMakeLists.txt  register_qml_types.cpp  register_qml_types.h  virtual_keyboard.qrc  virtual_keyboard_context.cpp  virtual_keyboard_context.h  virtual_keyboard_input_context.cpp  virtual_keyboard_input_context.h  virtual_keyboard_input_panel.cpp  virtual_keyboard_input_panel.h  virtual_keyboard_plugin.cpp  virtual_keyboard_plugin.h  virtualkeyboard.json
src/virtual_keyboard/: InputPanel.qml  Key.qml  Keyboard.qml  KeyboardKey.qml  KeyboardLayout.qml  WordCandidates.qml
